[tool.poetry]
name = "curses-dom"
version = "0.1.0"
description = "terminal renderer for html/css"
authors = ["Kevin Lai <kevin@e-itheta.com>"]

packages = [
    { include = "CursesDOM" },
]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
requests = "^2.26.0"
cssutils = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
curses-dom = "CursesDOM.main:main"